<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.yuvan.bhuvan.ifelse.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display"
        android:text="@string/enteredAge"
        android:background="#8bb6e1"
        android:textColor="#f1071a"
        android:autoLink="all"
        android:textSize="20dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/inputAge"
        android:hint="@string/age"
        android:background="#f2f4f5"
        android:textColor="#123"
        android:textStyle="bold"
        android:inputType="number"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter"
        android:text="@string/enter"
        android:onClick="IfElse"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Switch"
        android:text="@string/Switch"
        android:onClick="SwitchExample"
        android:textColor="#fbfbfc"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/For"
        android:text="@string/For"
        android:onClick="ForExample"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:background="#f4f5f7"
        />




</LinearLayout>
